1. Archive design done 2. edit post not showing calendar solved

--- a/assets/css/fullcalendar.css
+++ b/assets/css/fullcalendar.css
@@ -1091,32 +1091,32 @@ be a descendant of the grid when it is being dragged.
   border-top-color: transparent;
   border-bottom-color: transparent; }
 
-.calendar-summary, .calendar-select-date {
+.calendar-summary, .calendar-select-date, .archive-calendar {
   padding: 1.46667rem;
   height: 100%; }
-  .calendar-summary .fc-head, .calendar-select-date .fc-head {
+  .calendar-summary .fc-head, .calendar-select-date .fc-head, .archive-calendar .fc-head {
     border-bottom: 1px solid #666666; }
-  .calendar-summary .fc th, .calendar-summary .fc td, .calendar-select-date .fc th, .calendar-select-date .fc td {
+  .calendar-summary .fc th, .calendar-summary .fc td, .calendar-select-date .fc th, .calendar-select-date .fc td, .archive-calendar .fc th, .archive-calendar .fc td {
     border-width: 0;
     border-radius: 8px;
     vertical-align: middle; }
-    .calendar-summary .fc th.ui-state-highlight, .calendar-summary .fc td.ui-state-highlight, .calendar-select-date .fc th.ui-state-highlight, .calendar-select-date .fc td.ui-state-highlight {
+    .calendar-summary .fc th.ui-state-highlight, .calendar-summary .fc td.ui-state-highlight, .calendar-select-date .fc th.ui-state-highlight, .calendar-select-date .fc td.ui-state-highlight, .archive-calendar .fc th.ui-state-highlight, .archive-calendar .fc td.ui-state-highlight {
       background: #C71F2A; }
-  .calendar-summary .fc td.fc-day-number, .calendar-select-date .fc td.fc-day-number {
+  .calendar-summary .fc td.fc-day-number, .calendar-select-date .fc td.fc-day-number, .archive-calendar .fc td.fc-day-number {
     padding-top: 8px;
     padding-bottom: 8px; }
-  .calendar-summary .fc-day-header, .calendar-select-date .fc-day-header {
+  .calendar-summary .fc-day-header, .calendar-select-date .fc-day-header, .archive-calendar .fc-day-header {
     color: #666666; }
-  .calendar-summary .fc-ltr .fc-basic-view .fc-day-number, .calendar-select-date .fc-ltr .fc-basic-view .fc-day-number {
+  .calendar-summary .fc-ltr .fc-basic-view .fc-day-number, .calendar-select-date .fc-ltr .fc-basic-view .fc-day-number, .archive-calendar .fc-ltr .fc-basic-view .fc-day-number {
     text-align: center; }
-  .calendar-summary .fc-basic-view .fc-body .fc-row, .calendar-select-date .fc-basic-view .fc-body .fc-row {
+  .calendar-summary .fc-basic-view .fc-body .fc-row, .calendar-select-date .fc-basic-view .fc-body .fc-row, .archive-calendar .fc-basic-view .fc-body .fc-row {
     min-height: inherit;
     height: auto !important; }
-  .calendar-summary .fc-row .fc-content-skeleton, .calendar-select-date .fc-row .fc-content-skeleton {
+  .calendar-summary .fc-row .fc-content-skeleton, .calendar-select-date .fc-row .fc-content-skeleton, .archive-calendar .fc-row .fc-content-skeleton {
     padding-bottom: 0; }
-  .calendar-summary button, .calendar-select-date button {
+  .calendar-summary button, .calendar-select-date button, .archive-calendar button {
     height: auto; }
-  .calendar-summary h2, .calendar-select-date h2 {
+  .calendar-summary h2, .calendar-select-date h2, .archive-calendar h2 {
     text-transform: none;
     font-size: 1.33333rem;
     border: 0;
@@ -1157,6 +1157,23 @@ be a descendant of the grid when it is being dragged.
 .future-dates-only .fc-past {
   opacity: .3;
   cursor: not-allowed; }
+
+.archive-calendar {
+  padding: 1.5rem 1.46667rem 1.46667rem; }
+  .archive-calendar h2 {
+    font-family: "Futura LT W01 Book", Arial, Helvetica, sans-serif;
+    padding: 0;
+    line-height: 30px;
+    font-size: 1.13333rem; }
+  .archive-calendar .fc {
+    font-family: "Futura LT W01 Book", Arial, Helvetica, sans-serif; }
+    .archive-calendar .fc td.ui-state-highlight {
+      background: none; }
+  .archive-calendar .fc-day-header {
+    color: #bfbfbf;
+    font-family: "Futura LT W01 Light", Arial, Helvetica, sans-serif; }
+  .archive-calendar .fc-other-month {
+    opacity: 0; }
 
 #calendar-week {
   margin-top: -26px; }
@@ -1366,11 +1383,16 @@ be a descendant of the grid when it is being dragged.
   border: 0;
   color: #666666; }
 
-.ui-button {
-  font-family: "FontAwesome"; }
-  .ui-button.fc-prev-button:before {
-    content: ""; }
-  .ui-button.fc-next-button:before {
-    content: ""; }
+.fc .ui-button {
+  font-family: "FontAwesome";
+  font-size: 21px; }
+  .fc .ui-button.fc-prev-button:before {
+    content: ""; }
+  .fc .ui-button.fc-prevYear-button:before {
+    content: ""; }
+  .fc .ui-button.fc-next-button:before {
+    content: ""; }
+  .fc .ui-button.fc-nextYear-button:before {
+    content: ""; }
 
 /*# sourceMappingURL=fullcalendar.css.map */
